--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": "https://ChrisBar92.github.io/MyPortfolio",
 	"name": "my-portfolio",
 	"version": "0.1.0",
 	"private": true,
@@ -9,6 +10,7 @@
 		"aos": "^2.3.4",
 		"axios": "^1.2.1",
 		"emailjs-com": "^3.2.0",
+		"gh-pages": "^4.0.0",
 		"node-sass": "^7.0.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -21,9 +23,12 @@
 	},
 	"scripts": {
 		"start": "react-scripts start",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
+		
 	},
 	"eslintConfig": {
 		"extends": [
