--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://ChrisBar92.github.io/MyPortfolio",
+	"homepage": "https://chrisbar92.github.io/MyPortfolio",
 	"name": "my-portfolio",
 	"version": "0.1.0",
 	"private": true,
